[gd_scene load_steps=5 format=3 uid="uid://t3854q3qsgft"]

[ext_resource type="Script" path="res://scenes/gui/gui.gd" id="1_38lrq"]
[ext_resource type="PackedScene" uid="uid://dxyh0wf6duays" path="res://scenes/gui/toolbox.tscn" id="2_y2uiw"]
[ext_resource type="PackedScene" uid="uid://nc2m8a7nhmx0" path="res://scenes/gui/data_transfer.tscn" id="3_1pgll"]

[sub_resource type="ButtonGroup" id="ButtonGroup_cugmw"]

[node name="GUI" type="CanvasLayer"]
script = ExtResource("1_38lrq")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="Toolbox" parent="." instance=ExtResource("2_y2uiw")]
btn_group = SubResource("ButtonGroup_cugmw")

[node name="DataTransfer" parent="." instance=ExtResource("3_1pgll")]

[node name="ButtonCameraUp" type="Button" parent="."]
anchors_preset = -1
anchor_left = 30.0
anchor_top = 13.75
anchor_right = 32.0
anchor_bottom = 15.875
offset_left = -37200.0
offset_top = -9350.0
offset_right = -39680.0
offset_bottom = -10795.0
text = "Up"

[node name="ButtonCameraDown" type="Button" parent="."]
anchors_preset = -1
anchor_left = 30.0
anchor_top = 15.875
anchor_right = 32.0
anchor_bottom = 18.0
offset_left = -37200.0
offset_top = -10795.0
offset_right = -39680.0
offset_bottom = -12240.0
text = "Down"

[node name="HScrollBar" type="HScrollBar" parent="."]
offset_top = 544.0
offset_right = 1280.0
offset_bottom = 552.0
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="ButtonCameraUp" to="." method="_on_button_camera_up_pressed"]
[connection signal="pressed" from="ButtonCameraDown" to="." method="_on_button_camera_down_pressed"]
[connection signal="value_changed" from="HScrollBar" to="." method="_on_h_scroll_bar_value_changed"]
